# cardcounter

./: README.md  cardcounter.cabal  stack.yaml
app/: Main_CL.hs  Main_GUI.hs
src/: App.hs  CardDist.hs  Cmd.hs  Deck.hs  Dist.hs  Helpers.hs
