name:                cardcounter
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/cardcounter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Cmd
                     , Deck
                     , CardDist
                     , Dist
                     , Helpers
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
  default-language:    Haskell2010

executable cardcounter-cl
  hs-source-dirs:      app
  main-is:             Main_CL.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cardcounter
                     , containers
                     , mtl
  default-language:    Haskell2010

executable cardcounter-gui
  hs-source-dirs:      app
  main-is:             Main_GUI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cardcounter
                     , containers
                     , mtl
                     , reactive-banana-wx
                     , reactive-banana
                     , wx
  default-language:    Haskell2010

test-suite cardcounter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cardcounter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cardcounter
